--- a/bitmoto.css
+++ b/bitmoto.css
@@ -25,7 +25,7 @@
 #bitmoto.sale #cta2 {font-weight: bold;font-size: 34px;display: inline-block;width: 48%;text-align: center;}
 #bitmoto.sale #cta a {display: inline-block;color: white;padding: 4%;border-radius: 8px; text-decoration:none;}
 #bitmoto.sale section {width:99%;margin:18px auto;border-top:1px lightgray solid;padding:14px 0}
-#bitmoto.sale section p, #bitmoto.vehicle section h2, #bitmoto.vehicle section h3 {padding: 0 2%}
+#bitmoto.sale section p, #bitmoto.sale section h2, #bitmoto.sale section h3 {padding: 0 2%}
 #bitmoto.sale section img {width:95%;margin:auto;padding:2%}
 
 
