--- a/bitmoto.css
+++ b/bitmoto.css
@@ -52,6 +52,7 @@
 #bitmoto.service #service-cta {text-align:center;font-weight: bold; font-size: 24px;}
 #bitmoto.service #service-cta a {text-decoration:none;color:white;background-color: #000; display:inline-block;padding:22px 0; width:35%;margin: 0 4%;}
 #bitmoto.service p, #bitmoto.service h2 {padding:1%;}
+#bitmoto.service #services a {text-decoration:none;}
 
 
 /* Ford Pages */
