--- a/bitmoto.css
+++ b/bitmoto.css
@@ -149,7 +149,7 @@
 
 /* Lincoln */
 
-#bitmoto nav, #bitmoto #shop, #bitmoto .shop, #bitmoto #cta2 {background:#222;}
+#bitmoto.lincoln nav, #bitmoto.lincoln #shop, #bitmoto.lincoln .shop, #bitmoto.lincoln #cta2 {background:#222;}
 
 
 
