--- a/bitmoto.css
+++ b/bitmoto.css
@@ -67,8 +67,8 @@
 #bitmoto.ford #cta a {background: #29548c;}
 #bitmoto.ford #shop {background: #2d96cd;}
 
-#bitmoto.ford.sale nav {width:100%;background-color:#a32a2a;text-align: center;font-weight: bold;border-top: 3px #999 solid;font-size: 20px;min-width: 420px;}
-#bitmoto.ford.sale nav a {color: white;text-decoration: none;padding: 10px 0;display: inline-block;width: 23%;min-width: 99px;}
+#bitmoto.ford nav {background-color:#a32a2a;}
+#bitmoto.ford nav a {color: white;}
 #bitmoto.ford.sale section {width: 99%;margin: 18px auto;border-top: 1px lightgray solid;padding: 14px 0;}
 
 #bitmoto.ford.service #service-cta a {background-color: #232323;}
