--- a/bitmoto.css
+++ b/bitmoto.css
@@ -159,11 +159,16 @@
 
 /* Mobile Responsiveness */
 
+@media screen and (max-width: 900px) {
+
+}
+
 @media screen and (max-width: 780px) {
 
 }
 
 @media screen and (max-width: 640px) {
+  #bitmoto.vehicle #vehicle div { }
 
 }
 
@@ -173,11 +178,12 @@
   #bitmoto #cta1, #bitmoto #cta2 {width: 99% !important;}
   #bitmoto nav, #bitmoto #nav {min-width:320px !important; font-size: 18px;}
   #bitmoto #vehicle {background-image: none !important;max-width:100% !important;}
-  #bitmoto #vehicle div {position:relative !important; width:99% !important; top:0 !important;right:0 !important; left:0;
+  #bitmoto #vehicle div {position:relative !important; width:99% !important; top:0 !important;right:0 !important; left:5% !important;
     margin:28px 0; text-align:left !important;}
   #bitmoto #details .one {width:99% !important;}
   #bitmoto #details .one strong {font-size:22px;}
   #bitmoto #details .two {width:49% !important;}
+  #bitmoto #vehicle div:nth-of-type(2) { background:#2eacf0; color:white; left:0 !important; text-align:center !important;}
   #bitmoto #vehicle div:nth-of-type(3) {font-size:22px !important;}
   #bitmoto #vehicle div:nth-of-type(3) strong {font-size:34px !important;}
   #bitmoto.service #service-cta a {margin: 8px auto; width:80%;}
