--- a/bitmoto.css
+++ b/bitmoto.css
@@ -105,6 +105,7 @@
 #bitmoto.fiat.sales #cta1 span {display:inline-block;color:#29548c;padding:4%;border-radius:8px}
 #bitmoto.fiat.sales #cta2 a {text-decoration:none}
 #bitmoto.fiat.sales #cta2 span:hover {background-color:#1e88bd}
+#bitmoto.fiat #shop {background:#941711;}
 
 
 /* Chevrolet */
