--- a/bitmoto.css
+++ b/bitmoto.css
@@ -129,6 +129,11 @@
 #bitmoto.chevrolet.vehicle #details a:hover {background:#dbb26b;}
 
 
+/* Chrysler */
+
+#bitmoto.chrysler #shop {background:#333;}
+
+
 /* Kia */
 
 #bitmoto.kia h1 {font-size:28px;line-height:34px;margin:8px;padding:1%;}
