--- a/bitmoto.css
+++ b/bitmoto.css
@@ -134,6 +134,16 @@
 #bitmoto.chrysler #shop {background:#333;}
 
 
+/* Hyundai */
+
+#bitmoto.hyundai #shop {background:#094481;}
+
+
+/* Mazda */
+
+#bitmoto.mazda #shop {background:#094481;}
+
+
 /* Kia */
 
 #bitmoto.kia h1 {font-size:28px;line-height:34px;margin:8px;padding:1%;}
