--- a/bitmoto.css
+++ b/bitmoto.css
@@ -176,17 +176,21 @@
 
 /* Mobile Responsiveness */
 
+@media screen and (max-width: 990px) {
+#bitmoto.vehicle #vehicle #bitBlock2 {left:45% !important;}
+}
+
 @media screen and (max-width: 900px) {
 
 }
 
 @media screen and (max-width: 780px) {
-
+#bitmoto.vehicle #vehicle #bitBlock2 {left:48% !important;}
 }
 
 @media screen and (max-width: 640px) {
-  #bitmoto.vehicle #vehicle div { }
-
+#bitmoto.vehicle #vehicle div { }
+#bitmoto.vehicle #vehicle #bitBlock3 {right:1% !important;}
 }
 
 @media screen and (max-width: 480px) {
