--- a/bitmoto.css
+++ b/bitmoto.css
@@ -210,7 +210,7 @@
   #bitmoto #vehicle div:nth-of-type(3) strong {font-size:34px !important;}
   #bitmoto.service #service-cta a {margin: 8px auto; width:80%;}
   #bitmoto.service #hours {width:98%;margin:auto;}
-
+  #bitmoto.vehicle #vehicle #bitBlock2 {left:2px !important;}
 }
 
 @media screen and (max-width: 415px) {
