--- a/bitmoto.css
+++ b/bitmoto.css
@@ -205,6 +205,12 @@
 @media screen and (max-width: 560px) {
   #bitmoto section div {width:99% !important;}
   #bitmoto.vehicle #vehicle {height:auto !important;}
+  
+  #bitmoto nav a:nth-of-type(1) {border-width:0 1px 0 0;border-style:solid;border-color:white}
+  #bitmoto nav a:nth-of-type(2) {border-width:0 0 0 0;border-style:solid;border-color:white}
+  #bitmoto nav a:nth-of-type(3) {border-width:1px 1px 0 0;border-style:solid;border-color:white}
+  #bitmoto nav a:nth-of-type(4) {border-width:1px 0 0 0;border-style:solid;border-color:white}
+  
 }
 
 @media screen and (max-width: 480px) {
