--- a/bitmoto.css
+++ b/bitmoto.css
@@ -10,7 +10,7 @@
 #bitmoto-signature a span {font-family:cursive;font-size:16px;color:#444;padding:4px}
 #bitmoto .intro {background: #f0f0f0;width: 95%;border-radius: 4px;padding: 2%;margin: 9px auto 2px;color:#555;}
 #bitmoto #vid {text-align: center;margin: auto;border-top: 1px lightgray solid;padding: 18px 0 0 0;}
-#bitmoto #disclaimer {color: gray;font-size: 10px;margin: 18px 0;border-top: 1px solid #f0f0f0; padding:2%}
+#bitmoto #disclaimer, #BitMoto-Disclaimer {color: gray;font-size: 10px;margin: 18px 0;border-top: 1px solid #f0f0f0; padding:2%}
 #bitmoto iframe {margin:auto;}
 #bitmoto nav {width:100%;text-align: center;font-weight: bold;border-top: 3px #999 solid;font-size: 20px;min-width: 420px;}
 #bitmoto nav a {text-decoration: none;padding: 10px 0;display: inline-block;width: 23%;min-width: 99px;}
