--- a/bitmoto.css
+++ b/bitmoto.css
@@ -89,6 +89,20 @@
 #bitmoto.rebate #FirstResponder .bottom p {width:31%;display:inline-block;background:#005596;padding:1%;min-height:140px;vertical-align: top;box-sizing: initial;text-align:left;}
 #bitmoto.rebate #FirstResponder h4:nth-of-type(2), #bitmoto.rebate #FirstResponder .bottom p:nth-of-type(2)  {background:#02a1e6;}
 
+#bitmoto.rebate.student h2:nth-of-type(1) {
+  text-align: center;
+  background: #2a3d5e;
+  color: white;
+  padding: 9px 0;
+  font-size: 38px;
+  margin: 14px 0;
+}
+
+
+#bitmoto.rebate.student h3 {
+  text-align:center;
+}
+
 
 /* Fiat Sales Pages */
 
