--- a/bitmoto.css
+++ b/bitmoto.css
@@ -249,7 +249,7 @@
 
 /* CycleMax */
 #bitmoto.cyclemax nav a {color:white;}
-#bitmoto.cyclemax #cta a {color:black;}
+#bitmoto.cyclemax #cta a {background-color:black;}
 
 
 /* Mobile Responsiveness */
