--- a/dealers/ford/gilboy-whitehall/css/custom.css
+++ b/dealers/ford/gilboy-whitehall/css/custom.css
@@ -1,4 +1,4 @@
 /* Dev CSS */
 
 #bitmoto-signature {display:none;}
-#bitmoto #details .one {display:none;}
+#bitmoto #details .one {display:none !important;}
