--- a/dealers/ford/haldeman/kutztown/vehicles.css
+++ b/dealers/ford/haldeman/kutztown/vehicles.css
@@ -14,7 +14,7 @@
 #BitMoto-FordEscapeMSRP {font-size:32px; font-weight:bold; line-height:1;}
 
 #bitmoto.ford.vehicle #details .two-1 {
-    position:relative;background:#069dca; padding:1% 0; display:inline-block;
+    position:relative;background:#069dca; padding:10px 0; display:inline-block;
     width:30%; margin:0 3% 0 0; text-align:center; font-size:28px;font-weight:bold;
 }
 
