--- a/dealers/ford/haldeman/kutztown/vehicles.css
+++ b/dealers/ford/haldeman/kutztown/vehicles.css
@@ -1,7 +1,7 @@
 
 
-#bitmoto.ford.vehicle nav {background:white; border-top:none;}
-#bitmoto.ford.vehicle nav a {color:black;font-weight:normal;font-size:17px;width:24%;display:inline-block; text-decoration:none;padding:1.5% 0;text-align:center;}
+#bitmoto.ford.vehicle nav {background:#069dca; border-top:none;}
+#bitmoto.ford.vehicle nav a {color:#fff;font-weight:normal;font-size:17px;width:24%;display:inline-block; text-decoration:none;padding:1.5% 0;text-align:center;}
 
 #bitmoto.ford.vehicle #details {text-align:left; margin:0.5% 0 0 0;}
 
